[project]
name = "use-lang-chain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.25.5",
    "faiss-cpu>=1.13.1",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.1.6",
    "openai>=2.14.0",
]
